--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,13 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
+    "emoji-mart": "^5.5.2",
+    "emoji-picker-react": "^4.9.2",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
